--- a/index.css
+++ b/index.css
@@ -13,7 +13,9 @@ header {
     text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
+#navegacao{
 
+}
 nav {
     display: flex;
     flex-wrap: wrap;
@@ -111,5 +113,8 @@ footer {
 
     p, li {
         font-size: 0.95rem;
+    }
+    #navegacao{
+        display: none;
     }
 }
